# admin_system_core

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_db_content.py  check_env_loading.py  clear_users.py  debug_import.py  debug_routes.py  docker-compose.yml  main.py  pyproject.toml  ragic_columns.json  requirements.txt  test_output.txt
api/: __init__.py  admin_auth.py  system.py  webhooks.py
assets/: .gitkeep
core/: __init__.py  app_context.py  dependencies.py  http_client.py  interface.py  line_auth.py  logging_config.py  providers.py  registry.py  router.py  server.py
docs/: administrative-module.md  chatbot-module.md  dashboard-module-sop.md  encryption-setup.md  framework.md  module-development.md  ragic-integration.md  security-checklist.md  webhook-setup.md
gui/: __init__.py  components.py  main_window.py  splash.py  theme.py  tray_icon.py
modules/: __init__.py  echo_module.py
scripts/: add_ragic_id_column.py  add_user_ragic_id.py  backfill_email_hash.py  check_db_content.py  check_ragic_raw.py  check_users.py  count_lines.py  create_admin.py  delete_user.py  fix_sop_schema.py  force_encrypt_data.py  gen_certs.py  get_sop_020_ragic_id.py  import_sop_from_excel.py  init-db.sql  migrate_encryption.py  migrate_to_account.py  parse_sop_excel.py  read_sop_020.py  resync.py  show_webhook_config.py  sync_sop_020_to_ragic.py  sync_users_to_ragic.py  update_sop_020.py  upload_sop_to_ragic.py
services/: __init__.py  line_client.py  ragic_service.py
static/: admin_system_tutorial.html  dashboard.html  login.html  sop_chatbot_tutorial.html
tests/: conftest.py  test_chatbot_vector_override.py  test_core_app_context.py  test_core_database.py  test_core_interface.py  test_core_line_auth.py  test_core_line_client.py  test_core_models.py  test_core_registry.py  test_core_schemas.py  test_core_security.py  test_core_services_auth.py  test_core_services_ragic.py  test_email_service.py  test_high_concurrency.py  test_leave_service.py  test_liff_configuration.py  test_line_extended.py  test_logging_security.py  test_qa_accuracy.py  test_security_cors_ssl.py  test_security_hardening.py  test_services_line.py  (+3 more)
(+163 files in other folders)
