[project]
name = "admin-system-core"
version = "1.0.0"
description = "Admin System Core - Modular backend framework with LINE Bot SOP chatbot"
authors = [{ name = "HSIB Team" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.25,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pgvector>=0.2.4,<1.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "httpx>=0.26.0,<1.0.0",
    "aiosmtplib>=3.0.0,<4.0.0",
    "line-bot-sdk>=3.5.0,<4.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "torch>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "PyQt6>=6.6.0,<7.0.0",
    "psutil>=5.9.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[project.scripts]
admin-system = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["core", "modules", "services", "gui", "api", "utils"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "linebot.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
